--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1501,6 +1501,10 @@
 	    float: none;
 	    display: inline-block;
 	}
+	#myLogo{
+		width: 78% !important;
+		margin-top: -9px !important;
+	}
 }
 /* Smaller than standard 320 (devices and browsers) */
 @media only screen and (max-width:219px){
@@ -1510,6 +1514,14 @@
 		max-width: 310px;
 	}
 }
+@media only screen and (max-width: 800px) {
+	
+		#myLogo{
+			width: 78% !important;
+			margin-top: -9px !important;
+		}
+	
+	}
 
 /*--------------------------------------------------------------
 Main css ends form here
