--- a/css/default.css
+++ b/css/default.css
@@ -1,1 +1,9 @@
 /*Blank CSS*/
+@media only screen and (max-width: 500px) {
+    
+        #myLogo{
+            width: 78% !important;
+            margin-top: -9px !important;
+        }
+    
+    }
