--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,14 @@
+#changeImg {}
 
-.site-branding{
+#changeImgMobil {
+    display: none;
+}
+
+#changeImgMobil2 {
+    display: none;
+}
+
+.site-branding {
     margin: 0;
     text-align: center;
     margin-bottom: 0px;
@@ -7,39 +16,41 @@
     left: 0px;
     top: -9px;
 }
+
 footer {
     background-color: #7C9584 !important;
     overflow: hidden !important;
     width: 100% !important;
-    height:80px !important;
+    height: 80px !important;
     font-size: 12px !important;
-    
 }
-.copyright{
+
+.copyright {
     text-align: center !important;
     width: 100% !important;
     margin-top: 32px !important;
     color: white !important;
 }
 
-#myLogo{
+#myLogo {
     width: 100% !important;
     margin-top: -4px !important;
 }
 
-.d-none{
-display: none !important;
+.d-none {
+    display: none !important;
 }
 
-#colophon{
-     background-color:#D9D9D9;
+#colophon {
+    background-color: #D9D9D9;
 }
-#masthead{
+
+#masthead {
     padding: 15px 0;
 }
+
 .header-v4 #masthead.sticky-enabled.sticky-header {
     background: #fff !important;
-
 }
 
 .header-v4 .main-navigation ul li a {
@@ -47,45 +58,47 @@ display: none !important;
     font-size: 15px !important;
 }
 
-#whiteBackground{
+#whiteBackground {
     background-color: #FFFFFF !important;
 }
 
-
 .section-featured-slider .overlay-enabled article::after {
-    background-color: rgba(101, 101, 101, 0.52) !important;
+    background-color: rgba(94, 94, 94, 0.56) !important;
 }
 
-
-.fixFont{
+.fixFont {
     font-family: 'Montserrat', sans-serif !important;
-    
 }
 
 .main-navigation ul li a {
-font-weight: 200 !important;
-font-size: 16px !important;
+    font-weight: 200 !important;
+    font-size: 16px !important;
 }
 
-.main-navigation{
+.main-navigation {
     text-align: center;
     margin-top: -19px;
 }
-.navAnchors{
+
+.navAnchors {
     padding-right: 184px;
 }
+
 #social1 {
     font-size: 40px !important;
-    color:#6b87c5 !important;
+    color: #6b87c5 !important;
 }
-#social2{
+
+#social2 {
     font-size: 40px !important;
-    color:#4dbddc !important;
+    color: #4dbddc !important;
 }
-#social3{
+
+#social3 {
     font-size: 40px !important;
-    color:#4ea0c5!important;
+    color: #4ea0c5 !important;
 }
+
 .section-featured-slider h4 {
     color: #fff;
     font-size: 25px !important;
@@ -97,26 +110,28 @@ font-size: 16px !important;
     box-shadow: -2px 1px 1px;
 }
 
-.fab{
+.fab {
     padding-top: 11px !important;
 }
 
-.section-featured-slider:hover .cycle-prev, .section-featured-slider:hover .cycle-next {
+.section-featured-slider:hover .cycle-prev,
+.section-featured-slider:hover .cycle-next {
     opacity: 0 !important;
 }
 
-.fixA{
+.fixA {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     margin-top: -20px !important;
 }
 
-.fixA::before{
+.fixA::before {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     margin-top: -14px !important;
 }
-.fixA::after{
+
+.fixA::after {
     padding-top: 0px !important;
     padding-bottom: 0px !important;
     margin-top: -14px !important;
@@ -127,26 +142,72 @@ font-size: 16px !important;
     border-bottom: none !important;
 }
 
-element.style {
-}
+element.style {}
+
 .header-v4 #masthead {
-  
     border-bottom: 1px solid #569856 !important;
-  
 }
 
-.pager-box cycle-pager-active{
+.pager-box cycle-pager-active {
     display: none !important;
 }
 
 
 
+@media only screen and (max-width: 895px) {
+    #myLogo {
+        width: 57% !important;
+        margin-top: -19px !important;
+    }
+}
 
-@media only screen and (max-width: 800px) {
-	
-		#myLogo{
-			width: 78% !important;
-			margin-top: -9px !important;
-		}
-	
-	}
+@media only screen and (max-width: 767px) {
+    #myLogo {
+        width: 58% !important;
+        margin-top: -13px !important;
+    }
+    #changeImg {
+        display: none;
+    }
+    #changeImgMobil {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    #myLogo {
+        width: 61% !important;
+        margin-top: -13px !important;
+    }
+    #changeImg {
+        display: none;
+    }
+    #changeImgMobil {
+        display: block;
+    }
+}
+
+@media only screen and (max-width: 479px) {
+    #myLogo {
+        width: 78% !important;
+        margin-top: -9px !important;
+    }
+    #changeImg {
+        display: none;
+    }
+    #changeImgMobil {
+        display: none;
+    }
+    #changeImgMobil2 {
+        display: block;
+    }
+    .section-featured-slider .cycle-caption {
+        bottom: 7% !important;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    #main-slider h3 a {
+        font-size: 30px;
+    }
+}
