--- a/css/custom.css
+++ b/css/custom.css
@@ -9,10 +9,10 @@
 }
 
 #main-slider h3 a {
-    font-family: "Oxygen" !important;
+    /* font-family: "Oxygen" !important; */
 }
 .section-featured-slider h4 {
-    font-family: "Oxygen" !important;
+    /* font-family: "Oxygen" !important; */
 }
 
 .site-branding {
